tool/ingress/10tool-ingress.yaml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: tool-ingress
#  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: kibana.mini-plab.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kibana
          servicePort: 5601
  - host: kafka-manager.mini-plab.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kafka-manager
          servicePort: 8080

  - host: kibana.plab-dev2.skplanet.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kibana
          servicePort: 5601
  - host: kafka-manager.plab-dev2.skplanet.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kafka-manager
          servicePort: 8080
