tool/ingress/10tool-ingress.yml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: tool-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: kibana.mini-plab.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kibana
          servicePort: 5601
  - host: kafka-manager.mini-plab.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kafka-manager
          servicePort: 8080
  - host: elastic.mini-plab.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80

  - host: kibana.plab-k8s.skplanet.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kibana
          servicePort: 5601
  - host: kafka-manager.plab-k8s.skplanet.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kafka-manager
          servicePort: 8080
  - host: elastic.plab-k8s.skplanet.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
